--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
-    "type": "git",
+    "type": "module",
     "url": "git+https://github.com/hearty22/crud-tasks-escalante-facundo..git"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -16,11 +17,5 @@
     "url": "https://github.com/hearty22/crud-tasks-escalante-facundo./issues"
   },
   "homepage": "https://github.com/hearty22/crud-tasks-escalante-facundo.#readme",
-  "description": "",
-  "dependencies": {
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "mysql2": "^3.14.3",
-    "sequelize": "^6.37.7"
-  }
+  "description": ""
 }
